--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,7 +3,25 @@
 </nav>
 
 
+
+
 <div>
+
+
+<%
+current_user.profile.events.each do |event|
+%>
+
+<%= event.to_json %><br>
+########################<br>
+	
+<%
+end
+%>
+
+
+
+
 <%
 current_user.profile.friends.each do |friend|
 %>
